modules/AWS/aws-security-groups.tf
resource "aws_security_group" "security_group_manager" {
  count       = "${var.provider == "AWS" ? 1 : 0}"
  name        = "${terraform.workspace}_manager"

  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "443"
    to_port     = "443"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }

  tags {
    Name = "${terraform.workspace}_manager"
  }
}

resource "aws_security_group" "security_group_worker" {
  count       = "${var.provider == "AWS" ? 1 : 0}"
  name        = "${terraform.workspace}_worker"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }

  tags {
    Name = "${terraform.workspace}_worker"
  }
}
